<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <Button
        android:id="@+id/b3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/volver3"
        android:onClick="volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <Button
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="132dp"
        android:text="@string/servicio"
        android:onClick="servicio"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toStartOf="@+id/grupo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/detener_servicio"
        android:onClick="stopService"
        app:layout_constraintBottom_toTopOf="@+id/b3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="147dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33">

        <RadioButton
            android:id="@+id/rad1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"

            android:checked="true"
            android:text="@string/iniciar_m_sica"
            app:layout_constraintBottom_toTopOf="@+id/rad2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.48000002" />


        <RadioButton
            android:id="@+id/rad2"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:checked="false"
            android:text="@string/detener_musica"
            app:layout_constraintBottom_toTopOf="@+id/rad3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/b1"
            app:layout_constraintTop_toBottomOf="@+id/rad1" />

        <RadioButton
            android:id="@+id/rad3"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginBottom="333dp"
            android:text="@string/bloquear"
            app:layout_constraintBottom_toTopOf="@+id/b3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b1"
            app:layout_constraintTop_toBottomOf="@+id/rad2" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>